--- a/pkmn.html
+++ b/pkmn.html
@@ -14,8 +14,15 @@
                 <li><a href="outerfun.html">OuterFun</a></li>
             </ul></nav>
         </header>
-        <div class="box why">
-            <p class="blog">Absolutely nothing here...</span></p>
+      <div class="box">
+            <h1 class="btitle">Going away...for months...</h1>
+            <p class="blog">I've been coding non-stop for the past 1-2 weeks and I've made huge improvements to<span style="color: #4d588d;"> POKÉMON: ICE COLD</span>! It's mostly graphical changes since they were ripped sprites from Pokémon FireRed, and honestly it looks way better now that it's in my style! But I think today will be the last day I'll be coding something in a while... I'll be visiting a friend of mine for a week, and then I will have to pre-study for a few days before my classes begin... I won't be able to code for at least 3 months! I'm actually really upset cause I was happy I finally had the urge to code, I hope I can have that urge back once I'm back home, I've got really nice ideas for my games! Other than graphical improvements, I also did some battle codes, the battle system is not finished yet, and I'm not really a fan of coding it... code's a mess...<br>In the past, I always shared a "demo" when I was gonna take some break (They had like 2 mins of gameplay in total), I won't be doing that now, if I ever want to release some kind of demo, the gameplay will have to have 20-30 mins of gameplay and it should also have some kind of cliffhanger rather than just ending it at the last place I coded... Anyway, I'm not really the kind of person that likes to keep everything hidden for a long time, so I'll be sharing some screenshots!</p>
+            <div>
+                <img class="screenshots" width="350" src="images/screenshot_1.png" alt="">
+                <img class="screenshots" width="350" src="images/screenshot_2.png" alt="">
+                <img class="screenshots" width="350" src="images/screenshot_3.png" alt="">
+            </div>
+            <p>06/02/2026</p>
         </div>
     </body>
 
