--- a/pages/pkmn.html
+++ b/pages/pkmn.html
@@ -8,7 +8,7 @@
         <header>
         <section><p style="opacity: 0;">Hotwhiskey29 Website Logo</p><img id="logo" src="../images/logo/logo-pkmn.png"></section>
             <nav><ul>
-                <li><a href="..\pages\index.html">Home</a></li>
+                <li><a href="..\index.html">Home</a></li>
                 <li><a href="..\pages\theseaboy.html">The Sea Boy</a></li>
                 <li><a href="..\pages\pkmn.html">Pokémon: Ice Cold</a></li>
                 <li><a href="..\pages\outerfun.html">OuterFun</a></li>
