--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
     <head>
         <title>Hotwhiskey29's Blog</title>
-        <link rel="stylesheet" href="\..\style\styles.css">
+        <link rel="stylesheet" href="style/styles.css">
     </head>
     <body>
         <header>
